--- a/src/components/feed-actor/feed-actor.module.css
+++ b/src/components/feed-actor/feed-actor.module.css
@@ -20,7 +20,7 @@
 .feedActorSubDetails {
   font-size: 12px;
   font-weight: 400;
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--text-dark-gray);
 }
 
 .link {
@@ -29,5 +29,5 @@
 }
 
 .link:hover {
-  color: #0a66c2;
+  color: var(--primary-blue);
 }
