--- a/src/components/follow-suggestions/suggestions.module.css
+++ b/src/components/follow-suggestions/suggestions.module.css
@@ -1,17 +1,22 @@
 .suggestionContainer {
   width: calc(270px + 2rem);
-  background: white;
+  background: var(--white);
   margin: 1rem 0;
   border-radius: 10px;
   height: max-content;
+  max-height: 80vh;
+  min-height: 4rem;
   position: sticky;
   top: 5rem;
   padding-top: 0.5rem;
+  overflow: auto;
 }
 
 .suggestionItem {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  width: calc(100% - 2rem);
   margin: 0.5rem 0;
   padding: 0.5rem 1rem;
   height: max-content;
@@ -21,17 +26,24 @@
   background: #ebebeb;
 }
 
-.suggestionItem > div:nth-child(1) {
-  width: 75%;
-}
-
 .suggestionAction {
+  margin-left: 2.5rem;
+  background: none;
+  border-radius: 15px;
+  border: 1px solid var(--primary-blue);
+  padding: 5px 10px;
+  width: max-content;
   font-size: 0.95rem;
-  color: #0a66c2;
+  color: var(--primary-blue);
 }
 
 .suggestionAction:hover {
   cursor: pointer;
+}
+
+.suggestionHeader {
+  margin: 1rem auto;
+  width: max-content;
 }
 
 @media (max-width: 768px) {
