--- a/src/features/feed/post.module.css
+++ b/src/features/feed/post.module.css
@@ -1,14 +1,10 @@
-body {
-  background: #f3f2ef;
-}
-
 .postContainer {
   max-width: 525px;
   margin: 1rem auto;
   font-size: 14px;
   letter-spacing: normal;
   font-family: system-ui;
-  background: white;
+  background: var(--white);
   padding: 0.5rem;
   border-radius: 5px;
 }
@@ -23,7 +19,7 @@ body {
   align-items: flex-end;
   font-size: 15px;
   font-weight: 600;
-  color: #00000099;
+  color: var(--text-dark-gray);
 }
 
 .postLikesStatBtn {
@@ -31,7 +27,7 @@ body {
   font-size: 0.9rem;
   padding: 0.15rem;
   margin-right: 5px;
-  background: rgb(10, 102, 194);
+  background: var(--primary-blue);
   border-radius: 50%;
   outline: black;
 }
@@ -68,7 +64,7 @@ body {
 }
 
 .actionBtn:hover {
-  color: #0a66c2;
+  color: var(--primary-blue);
   background: #00000014;
 }
 
@@ -120,7 +116,7 @@ body {
 }
 
 .commentActionbtn:hover {
-  color: #0a66c2;
+  color: var(--primary-blue);
   cursor: pointer;
 }
 
@@ -149,7 +145,7 @@ body {
 }
 
 .postFormContainer {
-  background: white;
+  background: var(--white);
   padding: 1rem;
   width: 525px;
 }
@@ -160,7 +156,7 @@ body {
 }
 
 .postFormContainer b {
-  color: #0a66c2;
+  color: var(--primary-blue);
 }
 
 .flexWrapper {
@@ -188,8 +184,8 @@ body {
 }
 
 .postSubmitBtn {
-  background: #0a66c2;
-  color: white;
+  background: var(--primary-blue);
+  color: var(--white);
   font-weight: 600;
   border: 0;
   padding: 0.5rem 0.8rem;
@@ -202,7 +198,7 @@ body {
 }
 
 .postSubmitBtn:disabled {
-  background: #00000099;
+  background: var(--text-dark-gray);
 }
 
 .imagePreviewContainer {
@@ -215,7 +211,7 @@ body {
   right: 0rem;
   height: 1.5rem;
   width: 1.5rem;
-  background: white;
+  background: var(--white);
   border-radius: 50%;
   display: flex;
   justify-content: center;
