--- a/src/features/nav/navbar.module.css
+++ b/src/features/nav/navbar.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   padding: 0 1rem;
   height: 3rem;
-  background: white;
+  background: var(--white);
   align-items: center;
   margin-bottom: 1rem;
   position: sticky;
