--- a/src/features/nav/navlinks.module.css
+++ b/src/features/nav/navlinks.module.css
@@ -32,7 +32,7 @@
   display: none;
   position: absolute;
   top: 2.5rem;
-  background: white;
+  background: var(--white);
   padding-top: 0.2rem;
 }
 
@@ -62,7 +62,7 @@
     bottom: 0;
     left: 0;
     width: 100vw;
-    background: white;
+    background: var(--white);
     padding: 0.2rem 0;
     max-width: unset;
   }
@@ -71,6 +71,6 @@
     top: unset;
     bottom: 3rem;
     right: 0;
-    background: #a0b4b7;
+    background: #ebebeb;
   }
 }
