--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,20 @@ html {
   scroll-behavior: smooth;
 }
 
+:root {
+  --white: #ffffff;
+  --bg-gray: #ebebeb;
+  --text-dark-gray: rgba(0, 0, 0, 0.6);
+
+  --primary-blue: #0a66c2;
+  --dark-blue: #004182;
+  --disable-blue: #91c4f8;
+
+  --active-green: #008000;
+}
+
 body {
+  background: #f3f2ef;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -19,8 +32,8 @@ code {
 hr {
   margin-block-start: 0.3em;
   margin-block-end: 0.3em;
-}
-
-.hashtag {
-  color: #0a66c2;
+  border-top: 1px solid lightgray;
+  border-bottom: 0;
+  border-left: 0;
+  border-right: 0;
 }
