--- a/src/components/follow-suggestions/suggestions.module.css
+++ b/src/components/follow-suggestions/suggestions.module.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: calc(100% - 2rem);
+  width: 100%;
   margin: 0.5rem 0;
   padding: 0.5rem 1rem;
   height: max-content;
